// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus Snapshots android renders correctly with accountName in route params 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              A wallet using "test@example.com" already exists. Do you want to try logging in instead?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Log in
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots android renders correctly with type="found" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              A wallet using "[missing {{accountName}} value]" already exists. Do you want to try logging in instead?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Log in
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots android renders correctly with type="not_exist" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet not found
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              We couldn’t find a wallet for "[missing {{accountName}} value]". Do you want to create a new one with this login?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Create a new wallet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with accountName in route params 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              A wallet using "test@example.com" already exists. Do you want to unlock this wallet?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Unlock wallet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with type="found" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet already exists
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              A wallet using "[missing {{accountName}} value]" already exists. Do you want to unlock this wallet?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Unlock wallet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`AccountStatus Snapshots iOS renders correctly with type="not_exist" 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "flex-start",
              "paddingBottom": 24,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Wallet not found
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "alignSelf": "center",
                "height": 302,
                "marginHorizontal": "auto",
                "marginVertical": 16,
                "width": 343,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "column",
                "rowGap": 20,
                "width": "100%",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              We couldn’t find a wallet for "[missing {{accountName}} value]". Do you want to create a new one with this login?
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "marginBottom": 16,
          "marginTop": "auto",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Create a new wallet
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use a different login method
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;
